# lightning-whisper-mlx

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
lightning_whisper_mlx/: decoding.py  lightning.py  load_models.py  timing.py  transcribe.py
